--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=style.css.map */
+@font-face {
+  font-family: "Solway";
+  src: url("../fonts/Solway-Bold.ttf") format("truetype"), url("../fonts/Solway-ExtraBold.ttf") format("truetype"), url("../fonts/Solway-Light.ttf") format("truetype"), url("../fonts/Solway-Medium.ttf") format("truetype"), url("../fonts/Solway-Regular.ttf") format("truetype");
+}/*# sourceMappingURL=style.css.map */
