--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Kulim+Park:wght@300;400;600;700&display=swap");
 @font-face {
   font-family: "Solway";
   src: url("../fonts/Solway-Bold.ttf") format("truetype"), url("../fonts/Solway-ExtraBold.ttf") format("truetype"), url("../fonts/Solway-Light.ttf") format("truetype"), url("../fonts/Solway-Medium.ttf") format("truetype"), url("../fonts/Solway-Regular.ttf") format("truetype");
+}
+h1 {
+  font-family: "Solway";
 }/*# sourceMappingURL=style.css.map */
