--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,12 @@
         
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Kulim+Park:wght@300;400;600;700&display=swap');
+
+$solway: 'Solway';
+$kulim :  'Kulim Park', sans-serif;
+
+h1{
+    font-family: $solway;
+}
+
