--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,6 @@
+
+
+// IMPORTACIONES DE TIPOGRAFIAS
 @font-face {
     font-family: 'Solway';
     src:url('../fonts/Solway-Bold.ttf') format('truetype'),
@@ -10,10 +13,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kulim+Park:wght@300;400;600;700&display=swap');
 
+
+// VARIABLES
+// COLORS
+$color1: #3683C3;
+$color2: #A0EBF1;
+$color3: #FFF8EB;
+$color4: #FFED66;
+$color5: #FC9256;
+$black : #121212;
+$white : #ffff;
+// FONTS
 $solway: 'Solway';
 $kulim :  'Kulim Park', sans-serif;
 
+
+
+
 h1{
-    font-family: $solway;
+    font-family: $kulim;
 }
 
