--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,26 @@
 }
 h1 {
   font-family: "Solway";
+}
+
+.font-kulimpark {
+  font-family: "Kulim Park", sans-serif;
+}
+
+.font .py-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.pt-100 {
+  padding-top: 100px;
+}
+
+.pb-100 {
+  padding-bottom: 100px;
+}
+
+.px-100 {
+  padding-left: 100px;
+  padding-right: 100px;
 }/*# sourceMappingURL=style.css.map */
