--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,22 @@ h1{
     font-family: $solway;
 }
 
+.font-kulimpark{
+    font-family: $kulim;
+}
+.font
+
+.py-100{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.pt-100{
+    padding-top: 100px;
+}
+.pb-100{
+    padding-bottom: 100px;
+}
+.px-100{
+    padding-left: 100px;
+    padding-right: 100px;
+}
